--- a/charts/elastic-cluster/charts/scripts/templates/script1.yaml
+++ b/charts/elastic-cluster/charts/scripts/templates/script1.yaml
@@ -11,7 +11,12 @@ spec:
           {
             "script": {
               "lang": "painless",
-              "source": "Math.log(_score * 2) + params['my_modifier']"
+              "source": """
+              Math.log(_score * 2) + params['my_modifier']
+              Math.log(_score * 2) + params["my_modifier"]
+              Math.log(_score * 2) + params['my_modifier']
+              Math.log(_score * 2) + params["my_modifier"]
+              """
             }
           }  
 {{ end }}
