--- a/charts/elastic-cluster/charts/scripts/templates/script1.yaml
+++ b/charts/elastic-cluster/charts/scripts/templates/script1.yaml
@@ -20,6 +20,11 @@ spec:
                 ctx.op = 'none' 
               }
               """
+                """
+                   int count = 1;
+                   return count;
+                """
+
             }
           }  
 {{ end }}
