--- a/charts/elasticoperator/templates/clusterrole-operator.yaml
+++ b/charts/elasticoperator/templates/clusterrole-operator.yaml
@@ -56,6 +56,7 @@ rules:
       - connectors
       - alertrules
       - syncsecrets
+      - elasticusers
     verbs: ["get","watch","list" ]
   - apiGroups:
         - ""
