--- a/infrastructure/crds/elasticcontroller-1.0.3.yaml
+++ b/infrastructure/crds/elasticcontroller-1.0.3.yaml
@@ -702,3 +702,93 @@ spec:
                 k8slabel:
                   type: string
               required: ["name","body","cluster","secret","k8skey","k8stype"]
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: elasticsecrets.elastic.elastic-operator
+spec:
+  group: elastic.elastic-operator
+  scope: Namespaced
+  names:
+    plural: elasticsecrets
+    singular: elasticsecret
+    kind: ElasticSecret
+    categories:
+    - elastic
+  versions:
+    - name: v1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          description: "Elastic Secret"
+          properties:
+            spec:
+              type: object
+              properties:
+                name:
+                  type: string
+                cluster:
+                  type: string
+                body:
+                  type: string
+                k8snamespace:
+                  type: string
+                secret:
+                  type: string
+                k8skey:
+                  type: string
+                k8stype:
+                  type: string
+                k8slabel:
+                  type: string
+                k8slength:
+                  type: string  
+              required: ["name","cluster","secret","k8skey","k8stype"]
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: serviceaccounttokens.elastic.elastic-operator
+spec:
+  group: elastic.elastic-operator
+  scope: Namespaced
+  names:
+    plural: serviceaccounttokens
+    singular: serviceaccounttoken
+    kind: ServiceAccountToken
+    categories:
+    - elastic
+  versions:
+    - name: v1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          description: "Service Account Token"
+          properties:
+            spec:
+              type: object
+              properties:
+                name:
+                  type: string
+                cluster:
+                  type: string
+                k8snamespace:
+                  type: string
+                secret:
+                  type: string
+                k8skey:
+                  type: string
+                k8stype:
+                  type: string
+                k8slabel:
+                  type: string
+                k8slength:
+                  type: string  
+                service:
+                  type: string  
+              required: ["name","cluster","secret","k8skey","k8stype","service"]
