--- a/charts/elasticoperator/templates/clusterrole-operator.yaml
+++ b/charts/elasticoperator/templates/clusterrole-operator.yaml
@@ -57,6 +57,8 @@ rules:
       - alertrules
       - syncsecrets
       - elasticusers
+      - elasticsecrets
+      - serviceaccounttokens
     verbs: ["get","watch","list" ]
   - apiGroups:
         - ""
