--- a/charts/elasticoperator/templates/clusterrole-view.yaml
+++ b/charts/elasticoperator/templates/clusterrole-view.yaml
@@ -36,4 +36,6 @@ rules:
       - alertrules
       - syncsecrets
       - elasticusers
+      - elasticsecrets
+      - serviceaccounttokens
     verbs: ["get","watch","list" ]
