--- a/charts/elastic-cluster/charts/cluster/templates/kb-encryption.yaml
+++ b/charts/elastic-cluster/charts/cluster/templates/kb-encryption.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{.Release.Name}}-kb-encryption
   namespace: {{ .Release.Namespace}}
 spec:
+  name: kb-encryption
   k8snamespace: observability
   secret: {{.Release.Name}}-kb-encryption
   k8stype: Opaque
