--- a/infrastructure/crds/elasticcontroller-1.0.3.yaml
+++ b/infrastructure/crds/elasticcontroller-1.0.3.yaml
@@ -730,8 +730,6 @@ spec:
               properties:
                 name:
                   type: string
-                cluster:
-                  type: string
                 k8snamespace:
                   type: string
                 secret:
@@ -744,7 +742,7 @@ spec:
                   type: string
                 k8slength:
                   type: string  
-              required: ["name","cluster","secret","k8skey","k8stype"]
+              required: ["name","secret","k8skey","k8stype"]
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
