--- a/infrastructure/crds/elasticcontroller-1.0.3.yaml
+++ b/infrastructure/crds/elasticcontroller-1.0.3.yaml
@@ -741,8 +741,8 @@ spec:
                 k8slabel:
                   type: string
                 k8slength:
-                  type: string  
-              required: ["name","secret","k8skey","k8stype"]
+                  type: integer
+              required: ["name","secret","k8skey","k8stype","k8slength"]
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
