--- a/infrastructure/crds/elasticcontroller-1.0.3.yaml
+++ b/infrastructure/crds/elasticcontroller-1.0.3.yaml
@@ -742,6 +742,11 @@ spec:
                   type: string
                 k8slength:
                   type: integer
+                keyvaultname:
+                  type: string
+                keyvaultsecret:
+                  type: string
+
               required: ["name","secret","k8skey","k8stype","k8slength"]
 ---
 apiVersion: apiextensions.k8s.io/v1
