--- a/charts/elastic-cluster/charts/cluster/values.yaml
+++ b/charts/elastic-cluster/charts/cluster/values.yaml
@@ -12,6 +12,13 @@ eck:
   namespace: system
   name: elastic-operator
 
+
+fleet:
+  config:
+    enabled: false
+    mode: fleet
+    count: 1
+
 kibana:
   config:
     count: 1
