--- a/charts/elastic-cluster/charts/cluster/templates/fleet-ingress.yaml
+++ b/charts/elastic-cluster/charts/cluster/templates/fleet-ingress.yaml
@@ -4,7 +4,10 @@ kind: Ingress
 metadata:
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: HTTPS
-    nginx.ingress.kubernetes.io/proxy-body-size: 50m    
+    nginx.ingress.kubernetes.io/proxy-body-size: 50m 
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "240"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "240"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "240"       
   name: {{ .Release.Name}}-agent-ingress
   namespace: {{ .Release.Namespace}}
 spec:
