--- a/clusters/dev/k8s-logs/releases.yaml
+++ b/clusters/dev/k8s-logs/releases.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 10m0s
   timeout: 5m0s
-  path: ./charts/elastic-logs
+  path: ./charts/k8s-logs
   prune: true
   sourceRef:
     kind: GitRepository
@@ -22,7 +22,7 @@ spec:
         apiVersion: helm.toolkit.fluxcd.io/v2beta1
         kind: HelmRelease
         metadata:
-          name: elastic-logs
+          name: k8s-logs
           namespace: observability
         spec:
           releaseName: k8s-logs
