--- a/charts/elasticoperator/templates/configmap.yaml
+++ b/charts/elasticoperator/templates/configmap.yaml
@@ -21,3 +21,4 @@ data:
   ElasticUsers: "{{ .Values.ConfigMap.ElasticUsers}}"
   KibanaDnsSuffix: "{{ .Values.ConfigMap.KibanaDnsSuffix}}"
   ElasticDnsSuffix: "{{ .Values.ConfigMap.ElasticDnsSuffix}}"
+  PvcMonitor: "{{ .Values.ConfigMap.PvcMonitor}}"
