--- a/charts/elasticoperator/values.yaml
+++ b/charts/elasticoperator/values.yaml
@@ -16,6 +16,7 @@ ConfigMap:
   KibanaDnsSuffix: "-kb-http"
   ElasticDnsSuffix: "-es-http"
   PvcMonitor: "True"
+  DumpAkvKeys: "False"
 
 Operator:
   Sa: "sa"
