--- a/charts/elasticoperator/templates/deployment.yaml
+++ b/charts/elasticoperator/templates/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: {{ .Release.Name}}
         version: v1
+      annotations:
+        checksum/config: {{ include (print .Template.BasePath "/configmap.yaml") . | sha256sum }}        
     spec:
       serviceAccountName: {{ .Release.Name}}-{{ .Values.Operator.Sa }}
       containers:
