--- a/charts/patchhelm/release.yaml
+++ b/charts/patchhelm/release.yaml
@@ -1,10 +1,10 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: k8s-logs
+  name: patchhelm
   namespace: observability
 spec:
-  releaseName: k8s-logs
+  releaseName: patchhelm
   targetNamespace: observability
   chart:
     spec:
