--- a/charts/charts/patchhelm/templates/ns.yaml
+++ b/charts/charts/patchhelm/templates/ns.yaml
@@ -3,6 +3,6 @@ kind: Namespace
 metadata:
   name: patchhelm
   labels:
-    environment: ${apikeyRollover}
+#    environment: test
     region: dk
     version: {{ .Values.filebeat.config.version}}
