--- a/charts/charts/patchhelm/templates/ns.yaml
+++ b/charts/charts/patchhelm/templates/ns.yaml
@@ -3,6 +3,6 @@ kind: Namespace
 metadata:
   name: patchhelm
   labels:
-#    environment: test2
+    environment: ${apikeyRollover}
     region: dk
     version: {{ .Values.filebeat.config.version}}
