--- a/clusters/dev/patchhelm/releases.yaml
+++ b/clusters/dev/patchhelm/releases.yaml
@@ -17,3 +17,24 @@ spec:
     substituteFrom:
       - kind: ConfigMap
         name: env
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      name: patchhelm
+      namespace: observability
+  patches:
+    - patch: |-
+        apiVersion: helm.toolkit.fluxcd.io/v2beta1
+        kind: HelmRelease
+        metadata:
+          name: patchhelm
+          namespace: observability
+        spec:
+          values:
+            filebeat:
+              config:
+                version: 8.4.0
+      target:
+        kind: HelmRelease
+        name: patchhelm
+        namespace: observability
