--- a/clusters/dev/patchhelm2/releases.yaml
+++ b/clusters/dev/patchhelm2/releases.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 10m0s
   timeout: 5m0s
-  path: ./charts/patchhelm
+  path: ./charts/patchhelm2
   prune: true
   sourceRef:
     kind: GitRepository
@@ -30,7 +30,6 @@ spec:
           name: patchhelm2
           namespace: observability
         spec:
-          releaseName: patchhelm2
           values:
             filebeat:
               config:
